styling fixes, removed scrollbar entirely on navbar

--- a/client/src/components/AddWorkout/Workout.css
+++ b/client/src/components/AddWorkout/Workout.css
@@ -35,6 +35,7 @@
   justify-content: flex-start;
   align-content: center;
   flex-flow: wrap;
+  width: 100%;
 }
 
 .sectionHeader {
@@ -44,7 +45,8 @@
 }
 
 .inputBox {
-  flex: 1 0 100%;
+  flex: 1 0;
+  width: 100%;
   margin-bottom: 1rem;
   background-color: #d9d9d9;
   color: #3f51b5;
