--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -1,5 +1,7 @@
 ::-webkit-scrollbar {
-  height: 0px; /* Remove scrollbar space */
+  width: 0px; /* Remove scrollbar space */
+  height: 0px;
+  background: transparent; /* Optional: just make scrollbar invisible */
 }
 
 ul {
@@ -61,8 +63,9 @@ ul {
   top: 0;
   right: 0;
   font-size: 7vh;
-  color: #d9d9d9;
-  opacity: 0.8;
+  color: #3f51b5;
+  opacity: 0.6;
+  z-index: 1;
 }
 
 .left {
@@ -70,7 +73,8 @@ ul {
   top: 0;
   left: 0;
   font-size: 7vh;
-  color: #d9d9d9;
-  opacity: 0.8;
+  color: #3f51b5;
+  opacity: 0.6;
   display: none;
+  z-index: 1;
 }
